name:                ComonadSheet
version:             0.3.0.0
stability:           experimental
homepage:            https://github.com/kwf/ComonadSheet
synopsis:            A library for expressing spreadsheet-like computations as the fixed-points of comonads.
description:         @ComonadSheet@ is a library for expressing spreadsheet-like computations with absolute and relative references, using fixed-points of n-dimensional comonads. For examples of use, see the <https://github.com/kwf/ComonadSheet GitHub page> for the library.
license:             BSD3
license-file:        LICENSE
author:              Kenneth Foner
maintainer:          kenneth.foner@gmail.com
bug-reports:         https://github.com/kwf/ComonadSheet/issues
copyright:           Copyright: (c) 2013-2014 Kenneth W. Foner
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library

  exposed-modules:
      Control.Comonad.Sheet.Indexed,
      Control.Comonad.Sheet.Names,
      Control.Comonad.Sheet.Reference,
      Control.Comonad.Sheet.Manipulate,
      Control.Comonad.Sheet.Examples,
      Control.Comonad.Sheet

  other-extensions:
      FlexibleContexts,
      FlexibleInstances,
      GADTs,
      MultiParamTypeClasses,
      UndecidableInstances,
      LambdaCase,
      RankNTypes,
      StandaloneDeriving,
      ConstraintKinds,
      DataKinds,
      ScopedTypeVariables,
      TypeFamilies,
      TypeOperators,
      PolyKinds,
      DeriveFunctor,
      TupleSections,
      FlexibleContexts

  build-depends:
      base,
      comonad,
      distributive,
      transformers,
      applicative-numbers,
      Stream,
      NestedFunctor,
      PeanoWitnesses,
      IndexedList,
      Tape,
      containers

  default-language:    Haskell2010
